--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/shop?useSSL=true&characterEncoding=UTF-8&createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=Etc/GMT-0
     username: root
-    password: escheduler
+    password: root
 
   resources:
     chain:
@@ -10,7 +10,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
